Added grunt as an npm script.
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 
   "devDependencies": {
     "grunt": "0.4.x",
+    "grunt-cli": ">=0.1.6",
 
     "grunt-contrib-clean": "*",
     "grunt-contrib-coffee": "*",
