--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
 
   "scripts": {
-    "start": "node ./node_modules/grunt-cli/bin/grunt"
+    "start": "node ./node_modules/grunt-cli/bin/grunt",
+    "setup": "node ./node_modules/grunt-cli/bin/grunt setup",
+
+    "test": "node ./node_modules/grunt-cli/bin/grunt test"
   },
 
   "private": true,
