--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-build",
+  "name": "browserify-boilerplate",
   "version": "0.1.0",
 
   "devDependencies": {
@@ -19,7 +19,7 @@
 
   "repository": {
     "type" : "git",
-    "url" : "http://github.com/creatorrr/js-boilerplate.git"
+    "url" : "http://github.com/creatorrr/browserify-boilerplate.git"
   },
 
   "scripts": {
@@ -28,8 +28,6 @@
 
     "test": "node ./node_modules/grunt-cli/bin/grunt test"
   },
-
-  "private": true,
 
   "engines": {
     "node" : ">=0.8.0"
